Add shortcut to export route
Press 'X' to trigger the export route dialog.

Automatically populating the trackname field should work too.

--- a/locales/en.json
+++ b/locales/en.json
@@ -145,6 +145,7 @@
       "third": "3rd alternative"
     },
     "export": "Export",
+    "export-tooltip": "Export route (X key)",
     "load": {
       "nogos": "No-go areas",
       "title": "Load",
