Add shortcuts to load tracks and no-go areas
Press 'O' or 'Shift+O' to open/load tracks or no-go areas respectively.

--- a/locales/en.json
+++ b/locales/en.json
@@ -149,6 +149,7 @@
     "load": {
       "nogos": "No-go areas",
       "title": "Load",
+      "tooltip": "Load tracks (O key)\nLoad No-go areas (Shift+O)",
       "tracks": "Tracks"
     },
     "profile": {
