--- a/locales/is.json
+++ b/locales/is.json
@@ -5,6 +5,7 @@
     "bug-reports-front": "vefforrit / framendi.",
     "chat": "Spjallað við notendur og forritara",
     "contact": "Hafa samband:",
+    "contact-language": "Preferred language is English, as we have both international contributors and users.",
     "data": "Gögn:",
     "data-description": "Þetta er byggt á <a href=\"https://www.openstreetmap.org\" target=\"_blank\">OpenStreetMap</a>. Það er venjulega uppfært daglega, skoðaðu dagsetningar í <a href=\"https://brouter.de/brouter/segments4/\" target=\"_blank\">gagnaskrám</a>.",
     "description": "Vefþjónusta BRouter leiðagerðarvélarinnar. Varðandi Android forritið og ítarlegri upplýsingar er bent á <a href=\"https://brouter.de/\" target=\"_blank\">brouter.de</a>",
@@ -117,7 +118,7 @@
       "edit": "Smelltu til að breyta",
       "help": "&square; = færa / breyta stærð, <span class=\"fa fa-trash-o\"></span> = eyða,<br>smella á hring til að hætta breytingum"
     },
-    "opacity-slider": "Stilla gegnsæi leiða og merkja",
+    "opacity-slider": "Set transparency of route track and markers. Press and hold the 'M' key to temporarily hide the planned route.",
     "preview": "Forskoðun",
     "privacy": "Persónuvernd",
     "reverse-route": "Snúa við leið",
@@ -170,6 +171,20 @@
     }
   },
   "sidebar": {
+    "analysis": {
+      "header": {
+        "highway": "Highway",
+        "smoothness": "Smoothness",
+        "surface": "Surface"
+      },
+      "table": {
+        "category": "Category",
+        "length": "Length",
+        "total_known": "Total Known:",
+        "unknown": "Unknown"
+      },
+      "title": "Analysis"
+    },
     "customize-profile": {
       "title": "Sérsníða notkunarsnið"
     },
