--- a/locales/nb.json
+++ b/locales/nb.json
@@ -5,6 +5,7 @@
     "bug-reports-front": "webklient / for-ende",
     "chat": "Chat med brukere og utviklere",
     "contact": "Kontakt:",
+    "contact-language": "Preferred language is English, as we have both international contributors and users.",
     "data": "Data:",
     "data-description": "Dette er basert på <a href=\"https://www.openstreetmap.org\" target=\"_blank\">OpenStreetMap</a>. Vanligvis blir det oppdatert daglig. Se dato på <a href=\"https://brouter.de/brouter/segments4/\" target=\"_blank\">datafilene</a>.",
     "description": "Online-tjenesten til BRounter rutemotoren. For offline Android-app og mer informasjon, se <a href=\"https://brouter.de/\" target=\"_blank\">brouter.de</a>",
@@ -117,7 +118,7 @@
       "edit": "Klikk for å redigere",
       "help": "&square; = flytt / endre størrelse, <span class=\"fa fa-trash-o\"></span> = slett,<br>klikk på sirkelen for å avslutte redigering"
     },
-    "opacity-slider": "Angi gjennomsiktighet på rute-sti og markører.",
+    "opacity-slider": "Set transparency of route track and markers. Press and hold the 'M' key to temporarily hide the planned route.",
     "preview": "Forhåndsvisning",
     "privacy": "Personvern",
     "reverse-route": "Snu rute",
@@ -170,6 +171,20 @@
     }
   },
   "sidebar": {
+    "analysis": {
+      "header": {
+        "highway": "Highway",
+        "smoothness": "Smoothness",
+        "surface": "Surface"
+      },
+      "table": {
+        "category": "Category",
+        "length": "Length",
+        "total_known": "Total Known:",
+        "unknown": "Unknown"
+      },
+      "title": "Analysis"
+    },
     "customize-profile": {
       "title": "Customize profile"
     },
