--- a/locales/zh-TW.json
+++ b/locales/zh-TW.json
@@ -5,6 +5,7 @@
     "bug-reports-front": "網頁用戶端 / 前端.",
     "chat": "Chat with users and developers",
     "contact": "聯絡：",
+    "contact-language": "Preferred language is English, as we have both international contributors and users.",
     "data": "資料:",
     "data-description": "This is based on <a href=\"https://www.openstreetmap.org\" target=\"_blank\">OpenStreetMap</a>. It is usually updated daily, see dates of <a href=\"https://brouter.de/brouter/segments4/\" target=\"_blank\">data files</a>.",
     "description": "BRouter 導航引擎線上版。有關離線版 Android 應用程式及更多資訊，請見 <a href=\"https://brouter.de/\" target=\"_blank\">brouter.de</a>。",
@@ -117,7 +118,7 @@
       "edit": "點撃以編輯",
       "help": "&square; = 移動 / 調整大小， <span class=\"fa fa-trash-o\"></span> = 刪除，<br>點撃圓形以結束編輯"
     },
-    "opacity-slider": "設定路線軌跡和標記的透明度",
+    "opacity-slider": "Set transparency of route track and markers. Press and hold the 'M' key to temporarily hide the planned route.",
     "preview": "Preview",
     "privacy": "隱私權",
     "reverse-route": "Reverse route",
@@ -170,6 +171,20 @@
     }
   },
   "sidebar": {
+    "analysis": {
+      "header": {
+        "highway": "Highway",
+        "smoothness": "Smoothness",
+        "surface": "Surface"
+      },
+      "table": {
+        "category": "Category",
+        "length": "Length",
+        "total_known": "Total Known:",
+        "unknown": "Unknown"
+      },
+      "title": "Analysis"
+    },
     "customize-profile": {
       "title": "Customize profile"
     },
